@@ -1,3 +1,10 @@
+2001-09-07  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
+
+	* ftpd.tcl: Applied patch [459197] from Hemang to fix more
+	  'namespace export *'. Patch modified before application as some
+	  export command are actually private (Implementations of the ftp
+	  commands).
+
 2001-09-05  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
 
 	* ftpd.tcl: Restricted export list to public API.
